--- a/index.html
+++ b/index.html
@@ -16,7 +16,47 @@
   <!-- Style -->
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-  
+  <!-- Header -->
+  <header class="header">
+    <div class="container">
+
+      <!-- Navigation -->
+      <nav class="navigation"> 
+        <!-- Logo -->
+        <div class="logo">
+          Logo
+        </div>
+        <!-- /Logo -->
+
+        <!-- Small-list -->
+        <div class="list-header">
+          <a href=""></a>
+        </div>
+        <!-- /Small-list -->
+
+        <!-- Responsive-list -->
+        <div class="list-desktop">
+          <li><a href="">link</a></li>
+          <li><a href="">link</a></li>
+          <li><a href="">link</a></li>
+          <li><a href="">link</a></li>
+          <li><a href="">link</a></li>
+        </div>
+        <!-- /Responsive-list -->
+
+      </nav>
+      <!-- /Navigation -->
+    </div>
+    
+  </header>
+  <!-- /Header -->
+
+  <!-- Main -->
+  <!-- /Main -->
+
+  <!-- Footer -->
+  <!-- /Footer -->
 </body>
 </html>
