--- a/index.html
+++ b/index.html
@@ -54,6 +54,33 @@
   <!-- /Header -->
 
   <!-- Main -->
+  <main>
+
+    <!-- Demo-section -->
+    <section id="demo">
+      <div class="container">
+
+        <div class="demo-row">
+          <div class="demo-col big-col">
+
+            <div class="row-demo-col">
+              <div class="inside-demo-col"></div>
+              <div class="inside-demo-col"></div>
+            </div>
+
+          </div>
+
+          <div class="demo-col"></div>
+          <div class="demo-col"></div>
+          <div class="demo-col"></div>
+          <div class="demo-col"></div>
+        </div>
+
+      </div>
+    </section>
+    <!-- /Demo-section -->
+
+  </main>
   <!-- /Main -->
 
   <!-- Footer -->
