add: Planning section layout, responsive

--- a/index.html
+++ b/index.html
@@ -80,6 +80,18 @@
     </section>
     <!-- /Demo-section -->
 
+    <!-- Strategic Planning Section -->
+    <section id="s-planning">
+      <div class="container">
+        <div class="s-p-row">
+          <div class="s-p-col"></div>
+          <div class="s-p-col"></div>
+        </div>
+      </div>
+      
+    </section>
+    <!-- /Strategic Planning Section -->
+
   </main>
   <!-- /Main -->
 
