add: testimonials section layout, responsive

--- a/index.html
+++ b/index.html
@@ -92,6 +92,19 @@
     </section>
     <!-- /Strategic Planning Section -->
 
+    <!-- Testimonials Section -->
+    <section id="testimonials">
+      <div class="container">
+        <div class="testimonials-row">
+          <div class="t-col"></div>
+          <div class="t-col t-col-bg"></div>
+          <div class="t-col t-col-bg"></div>
+          <div class="t-col t-col-bg"></div>
+        </div>
+      </div>
+    </section>
+    <!-- /Testimonials Section  -->
+
   </main>
   <!-- /Main -->
 
