add: benefit section, responsive

--- a/index.html
+++ b/index.html
@@ -105,6 +105,33 @@
     </section>
     <!-- /Testimonials Section  -->
 
+    <!-- Benefit Section -->
+    <section id="benefit">
+      <div class="container">
+
+        <div class="subtitle">
+          <h2>Benefits of working with us</h2>
+        </div>
+
+        <div class="b-row">
+          <div class="b-col"></div>
+          <div class="b-col"></div>
+          <div class="b-col"></div>
+          <div class="b-col"></div>
+          <div class="b-col"></div>
+          <div class="b-col"></div>
+        </div>
+
+      </div>
+    </section>
+    <!-- /Benefit Section -->
+
+    <!-- About Us Section -->
+    <section id="about-us">
+
+    </section>
+    <!-- /About Us Section -->
+
   </main>
   <!-- /Main -->
 
