--- a/index.html
+++ b/index.html
@@ -128,9 +128,19 @@
 
     <!-- About Us Section -->
     <section id="about-us">
+      <div class="container">
 
+        <div class="about-row">
+          <div class="about-col"></div>
+          <div class="about-col"></div>
+        </div>
+
+      </div>
     </section>
     <!-- /About Us Section -->
+
+    <!-- Try Section -->
+    <!-- /Try Section -->
 
   </main>
   <!-- /Main -->
