--- a/index.html
+++ b/index.html
@@ -140,12 +140,24 @@
     <!-- /About Us Section -->
 
     <!-- Try Section -->
+    <section id="free-trial">
+      <div class="container">
+
+        <div class="content">
+
+        </div>
+
+      </div>
+    </section>
     <!-- /Try Section -->
 
   </main>
   <!-- /Main -->
 
   <!-- Footer -->
+  <footer>
+    
+  </footer>
   <!-- /Footer -->
 </body>
 </html>
