--- a/index.html
+++ b/index.html
@@ -156,7 +156,13 @@
 
   <!-- Footer -->
   <footer>
+    <div class="container">
+      <div class="content-footer">
+        a
+      </div>
+    </div>
     
+
   </footer>
   <!-- /Footer -->
 </body>
