add: header wip

--- a/index.html
+++ b/index.html
@@ -21,18 +21,21 @@
   <!-- Header -->
   <header class="header">
     <div class="container">
-
+      <!-- Logo -->
+      <div class="logo">
+        <img src="img/logo.png" alt="Logo">
+      </div>
+      <!-- /Logo -->
+      
       <!-- Navigation -->
       <nav class="navigation"> 
-        <!-- Logo -->
-        <div class="logo">
-          Logo
-        </div>
-        <!-- /Logo -->
+        
 
         <!-- Small-list -->
         <div class="list-header">
-          <a href=""></a>
+          <a href="">
+            <i class="fa-solid fa-bars"></i>
+          </a>
         </div>
         <!-- /Small-list -->
 
@@ -57,11 +60,11 @@
   <main>
 
     <!-- Demo-section -->
-    <section id="demo">
+    <section id="demo" class="padding">
       <div class="container">
 
         <div class="demo-row">
-          <div class="demo-col big-col">
+          <div class="demo-col">
 
             <div class="row-demo-col">
               <div class="inside-demo-col"></div>
@@ -81,7 +84,7 @@
     <!-- /Demo-section -->
 
     <!-- Strategic Planning Section -->
-    <section id="s-planning">
+    <section id="s-planning" class="padding">
       <div class="container">
         <div class="s-p-row">
           <div class="s-p-col"></div>
