add: end strategic planning section

--- a/index.html
+++ b/index.html
@@ -165,8 +165,35 @@
     <section id="s-planning" class="padding">
       <div class="container">
         <div class="s-p-row">
-          <div class="s-p-col"></div>
-          <div class="s-p-col"></div>
+          <div class="s-p-col">
+
+            <div class="planning-img">
+              <img src="img/planning1.png" alt="planning img">
+            </div>
+
+            <div class="planning-content">
+              <h2>Strategic Planning</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem sapiente nihil rem modi itaque nemo tempora mollitia, velit vero eaque quo, animi temporibus tempore fuga recusandae explicabo non impedit. Illo?</p>
+            </div>
+
+          </div>
+          <div class="s-p-col">
+            <div class="card-planning">
+
+              <div class="planning-img">
+                <img src="img/planning2.png" alt="planning 2 img">
+              </div>
+
+              <div class="card-planning-content">
+                <h3>App Developement</h3>
+                <p>Develop on-demand app for your delivery buisness reach your target customers without any interruption.</p>
+                <a href="" class="arrow-download">
+                  <span>&DownArrow;</span>
+                </a>
+              </div>
+            </div>
+            
+          </div>
         </div>
       </div>
       
