--- a/index.html
+++ b/index.html
@@ -281,12 +281,84 @@
         </div>
 
         <div class="b-row">
-          <div class="b-col"></div>
-          <div class="b-col"></div>
-          <div class="b-col"></div>
-          <div class="b-col"></div>
-          <div class="b-col"></div>
-          <div class="b-col"></div>
+          <div class="b-col">
+            <div class="b-card">
+              <div class="b-card-content">
+                <h2>01</h2>
+                <h3>Hight quality</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, impedit atque expedita ipsum ab voluptates voluptas praesentium pariatur maiores nam doloremque quis obcaecati modi molestias! Laboriosam, quo eius. Esse, sint.</p>
+              </div>
+
+              <div class="benefit-button">
+                <a href="" class="btn-benef">more</a>
+              </div>
+            </div>
+          </div>
+          <div class="b-col">
+            <div class="b-card">
+              <div class="b-card-content">
+                <h2>02</h2>
+                <h3>Creative Team</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, impedit atque expedita ipsum ab voluptates voluptas praesentium pariatur maiores nam doloremque quis obcaecati modi molestias! Laboriosam, quo eius. Esse, sint.</p>
+              </div>
+
+              <div class="benefit-button">
+                <a href="" class="btn-benef">more</a>
+              </div>
+            </div>
+          </div>
+          <div class="b-col">
+            <div class="b-card">
+              <div class="b-card-content">
+                <h2>03</h2>
+                <h3>Amazing Results</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, impedit atque expedita ipsum ab voluptates voluptas praesentium pariatur maiores nam doloremque quis obcaecati modi molestias! Laboriosam, quo eius. Esse, sint.</p>
+              </div>
+
+              <div class="benefit-button">
+                <a href="" class="btn-benef">more</a>
+              </div>
+            </div>
+          </div>
+          <div class="b-col">
+            <div class="b-card">
+              <div class="b-card-content">
+                <h2>04</h2>
+                <h3>Best Pricing</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, impedit atque expedita ipsum ab voluptates voluptas praesentium pariatur maiores nam doloremque quis obcaecati modi molestias! Laboriosam, quo eius. Esse, sint.</p>
+              </div>
+
+              <div class="benefit-button">
+                <a href="" class="btn-benef">more</a>
+              </div>
+            </div>
+          </div>
+          <div class="b-col">
+            <div class="b-card">
+              <div class="b-card-content">
+                <h2>05</h2>
+                <h3>Innovation</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, impedit atque expedita ipsum ab voluptates voluptas praesentium pariatur maiores nam doloremque quis obcaecati modi molestias! Laboriosam, quo eius. Esse, sint.</p>
+              </div>
+
+              <div class="benefit-button">
+                <a href="" class="btn-benef">more</a>
+              </div>
+            </div>
+          </div>
+          <div class="b-col">
+            <div class="b-card">
+              <div class="b-card-content">
+                <h2>06</h2>
+                <h3>24/7 Support</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, impedit atque expedita ipsum ab voluptates voluptas praesentium pariatur maiores nam doloremque quis obcaecati modi molestias! Laboriosam, quo eius. Esse, sint.</p>
+              </div>
+
+              <div class="benefit-button">
+                <a href="" class="btn-benef">more</a>
+              </div>
+            </div>
+          </div>
         </div>
 
       </div>
