--- a/index.html
+++ b/index.html
@@ -370,8 +370,28 @@
       <div class="container">
 
         <div class="about-row">
-          <div class="about-col"></div>
-          <div class="about-col"></div>
+          <div class="about-col col-big">
+            <div class="about-content">
+              <h2>About Us</h2>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto, numquam. Ad placeat dolorem natus dolorum! Veniam, excepturi velit omnis repellendus ullam consequuntur distinctio molestias et consectetur nulla illum, sequi amet?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quibusdam veniam deleniti culpa aliquid nulla velit itaque dolorum minima voluptatem iste quod labore minus, natus aut dolore fugit nam fuga!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa beatae nobis consequuntur quidem nihil praesentium blanditiis reiciendis ducimus nisi. Deserunt sapiente, iste ipsum cupiditate incidunt quos quas. Obcaecati, aliquid hic?
+              </p>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non voluptatibus odio quia officiis illo ea deserunt laboriosam, earum id quod eligendi sed adipisci? Adipisci molestias placeat reiciendis nulla praesentium fugit! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati molestias, nemo libero eos nihil itaque fuga expedita ipsum aspernatur ab cupiditate! Dicta corporis quo quidem eius delectus ipsum est minus? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis explicabo odit inventore dolor commodi laboriosam itaque voluptatem molestias dignissimos, enim iure, illo tempore, minima suscipit consectetur. Voluptas, reiciendis. Quas, eos! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore cum sunt iure voluptas? Fuga maiores ducimus cum, voluptas illum ullam nam modi quae? Cum maxime unde hic ut illum corrupti?</p>
+            </div>
+          </div>
+          <div class="about-col">
+            <div class="about-img">
+              <img class="profile-img" src="img/about.jpg" alt="profile img">
+            </div>
+
+            <div class="about-content">
+              <h3>I helped companies tincidunt tortor aliquam nulla facilisi cras fermentum odio.</h3>
+              <a class="btn-about" href="">
+                <i class="fa-brands fa-linkedin"></i>
+                <span>Find me on linkedin</span>
+              </a>
+            </div>
+        
+          </div>
         </div>
 
       </div>
