add: end free tryal section

--- a/index.html
+++ b/index.html
@@ -403,7 +403,24 @@
       <div class="container">
 
         <div class="content">
-
+          <h4 class="padding-try">GET STARTED</h4>
+          <h3 class="padding-try">Simple, Transparent Pricing</h3>
+          <h2 class="padding-try">It's Free!</h2>
+          <p class="padding-try">
+            We're still beta and we will be for awhile. As we add more functionally, we'll look into other plans whit more controls.
+          </p>
+          <div class="try-button padding-try">
+            <a class="btn-try" href="">Get started</a>
+          </div>
+          <div class="footer-try-section padding-try">
+            <span>
+              Copyright 2021 Boolean
+              <i class="fa-solid fa-circle fa-2xs"></i> 
+              Classe XX
+              <i class="fa-solid fa-circle fa-2xs"></i> 
+              <a class="privacy-policy" href="">privacy policy</a>
+            </span>
+          </div>
         </div>
 
       </div>
