add: end footer

--- a/index.html
+++ b/index.html
@@ -434,11 +434,21 @@
   <footer>
     <div class="container">
       <div class="content-footer">
-        a
+        <div class="content-f-top">
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam suscipit et eveniet distinctio sapiente quidem. Nam rem illo at. Animi culpa eligendi rem minus esse accusamus blanditiis natus modi voluptates.
+          </p>
+        </div>
+
+        <div class="content-f-bottom">
+          <p>
+            <a href="">Lorem ipsum</a>
+            <span>scelerisque mauris pellentesque</span>
+            <a href="">Boolean Careers</a>
+          </p>
+        </div>
       </div>
     </div>
-    
-
   </footer>
   <!-- /Footer -->
 </body>
