add: end testimonials section first card

--- a/index.html
+++ b/index.html
@@ -204,7 +204,11 @@
     <section id="testimonials">
       <div class="container">
         <div class="testimonials-row">
-          <div class="t-col"></div>
+          <div class="t-col title-col">
+            <h3>TESTIMONIALS</h3>
+            <h2>We are committed expert partners</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias ea illo hic facere quisquam odit, aperiam rerum incidunt a, omnis eos. Dignissimos id distinctio consequuntur itaque qui praesentium, voluptatem fugit!</p>
+          </div>
           <div class="t-col t-col-bg">
 
             <div class="card-row">
